Ajuste restricciones y campos Tarjeta DTO